--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "stormflame-studios",
+  "name": "pixel-tanks",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tank game",
   "main": "main.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "sudo node main.mjs"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/cs641311/stormflame-studios.git"
+    "url": "git+https://github.com/cs6413110/Pixel-Tanks.git"
   },
-  "author": "",
+  "keywords": [
+    "game"
+  ],
+  "author": "Aaron Godfrey",
   "license": "ISC",
   "bugs": {
-    "url": "https://gitlab.com/cs641311/stormflame-studios/issues"
+    "url": "https://github.com/cs6413110/Pixel-Tanks/issues"
   },
-  "homepage": "https://gitlab.com/cs641311/stormflame-studios#readme",
+  "homepage": "https://github.com/cs6413110/Pixel-Tanks#readme",
   "dependencies": {
     "bad-words": "^3.0.4",
-    "hyper-express": "^6.5.6",
+    "fs": "^0.0.1-security",
+    "hyper-express": "^6.7.1",
     "jsonpack": "^1.1.5",
-    "live-directory": "^3.0.2",
-    "mongodb": "^5.0.1",
+    "mongodb": "^5.6.0",
+    "node-fetch": "^3.3.1",
     "uuid-token-generator": "^1.0.0"
   }
 }
