--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonpack": "^1.1.5",
     "mongodb": "^5.6.0",
     "node-fetch": "^3.3.1",
+    "pathfinding": "^0.4.18",
     "uuid-token-generator": "^1.0.0"
   }
 }
