--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
   "name": "pixel-tanks",
   "version": "1.0.0",
-  "description": "Tank game",
+  "description": "",
   "main": "main.mjs",
   "scripts": {
-    "start": "sudo node main.mjs"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cs6413110/Pixel-Tanks.git"
-  },
-  "keywords": [
-    "game"
-  ],
-  "author": "Aaron Godfrey",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cs6413110/Pixel-Tanks/issues"
-  },
-  "homepage": "https://github.com/cs6413110/Pixel-Tanks#readme",
   "dependencies": {
     "bad-words": "^3.0.4",
-    "fast-json-stringify": "^5.8.0",
-    "fs": "^0.0.2",
-    "hyper-express": "^6.7.3",
-    "mongodb": "^5.7.0",
-    "node-fetch": "^3.3.1",
+    "express": "^4.18.2",
+    "express-ws": "^5.0.2",
+    "mongodb": "^6.0.0",
+    "msgpack-lite": "^0.1.26",
+    "node-fetch": "^3.3.2",
     "pathfinding": "^0.4.18",
     "uuid-token-generator": "^1.0.0"
   }
