--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: sourcery-ai/action@v1
         with:
-          token: "user_jHqDjgus1Wew58Iiodjo2n54AOKk8VarUMOt85D3Z2cCC_VMiLhhPgWjRmE"
+          token: user_jHqDjgus1Wew58Iiodjo2n54AOKk8VarUMOt85D3Z2cCC_VMiLhhPgWjRmE
           check: false
