--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "pixel-tanks",
   "version": "1.0.0",
   "description": "",
-  "main": "main.mjs",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ffa-server.js",
+    "full": "node main.js",
   },
   "author": "",
   "license": "ISC",
