--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ffa-server.js",
-    "full": "node main.js",
+    "full": "node main.js"
   },
   "author": "",
   "license": "ISC",
