--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "msgpack-lite": "^0.1.26",
     "node-fetch": "^3.3.2",
     "pathfinding": "^0.4.18",
-    "uuid-token-generator": "^1.0.0"
+    "uuid-token-generator": "^1.0.0",
+    "@sentry/node": "7.73.0",
+    "@sentry/profiling-node": "1.2.1"
   }
 }
