--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "7.73.0",
+    "@sentry/profiling-node": "1.2.1",
     "bad-words": "^3.0.4",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
@@ -16,7 +18,6 @@
     "node-fetch": "^3.3.2",
     "pathfinding": "^0.4.18",
     "uuid-token-generator": "^1.0.0",
-    "@sentry/node": "7.73.0",
-    "@sentry/profiling-node": "1.2.1"
+    "websocket": "^1.0.34"
   }
 }
