--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "pixel-tanks",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "build": "npm install",
-    "start": "node server.js"
+  "module": "server.js",
+  "type": "module",
+  "devDependencies": {
+    "bun-types": "latest"
   },
-  "author": "",
-  "license": "ISC",
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
   "dependencies": {
-    "@sentry/node": "7.73.0",
-    "@sentry/profiling-node": "1.2.1",
-    "bad-words": "^3.0.4",
-    "express": "^4.18.2",
-    "express-ws": "^5.0.2",
-    "mongodb": "^6.0.0",
-    "msgpack-lite": "^0.1.26",
-    "node-fetch": "^3.3.2",
-    "pathfinding": "^0.4.18",
-    "uuid-token-generator": "^1.0.0",
-    "websocket": "^1.0.34"
+    "mongodb": "^6.2.0",
+    "pathfinding": "^0.4.18"
   }
 }
