--- a/sweep.yaml
+++ b/sweep.yaml
@@ -3,9 +3,7 @@
 
 # This setting contains a list of rules that Sweep will check for. If any of these rules are broken in a new commit, Sweep will create an pull request to fix the broken rule.
 rules:
-- "All new business logic should have corresponding unit tests."
-- "Refactor large functions to be more modular."
-- "Add docstrings to all functions and file headers."
+- "Keep the same coding format."
 
 # This is the branch that Sweep will develop from and make pull requests to. Most people use 'main' or 'master' but some users also use 'dev' or 'staging'.
 branch: 'main'
@@ -18,7 +16,7 @@ gha_enabled: True
 # Example:
 #
 # description: sweepai/sweep is a python project. The main api endpoints are in sweepai/api.py. Write code that adheres to PEP8.
-description: ''
+description: 'PixelTanks is a javascript mutliplayer and singleplayer game project. Client js file is public/js/pixel-tanks.js. Server js file is node.js. Each imports other js files, game engine components, to run.'
 
 # This sets whether to create pull requests as drafts. If this is set to True, then all pull requests will be created as drafts and GitHub Actions will not be triggered.
 draft: False
